--- a/hal.html
+++ b/hal.html
@@ -18,7 +18,7 @@
     
 
     
-<link href="https://fontlibrary.org/face/glacial-indifference" rel="stylesheet" class="silex-custom-font"><meta name="website-width" content="1200"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="ghpages"><meta name="twitter:title" content="SNO KARST"><meta name="og:title" content="SNO KARST"><meta name="twitter:description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><meta name="og:description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><meta name="websiteUrl" content="https://fannysophie.github.io/TEST_SITE/"><link href="https://fontlibrary.org/face/spartanmb-regular" rel="stylesheet" class="silex-custom-font"><meta name="twitter:card" content="summary"><link href="css/logo_SNOKARST.png" rel="shortcut icon"><meta name="description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="https://fontlibrary.org/face/glacial-indifference" rel="stylesheet" class="silex-custom-font"><meta name="website-width" content="1200"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="ghpages"><meta name="twitter:title" content="SNO KARST"><meta name="og:title" content="SNO KARST"><meta name="twitter:description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><meta name="og:description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><meta name="websiteUrl" content="https://fannysophie.github.io/TEST_SITE/"><link href="https://fontlibrary.org/face/spartanmb-regular" rel="stylesheet" class="silex-custom-font"><link href="css/logo_SNOKARST.png" rel="shortcut icon"><meta name="description" content="L'observatoire SNO KARST est basé à Avignon (84). C'est un observatoire hydrogéologique qui récolte les données d'observation de plusieurs sites karstiques."><link href="https://fontlibrary.org/face/thsarabun-new" rel="stylesheet" class="silex-custom-font"><meta name="twitter:card" content="summary"><link href="css/styles.css" rel="stylesheet" type="text/css">
     <style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 <body class="body-initial all-style enable-mobile silex-runtime silex-published" data-silex-type="container">
@@ -86,7 +86,7 @@
       </div>
   </div>
 </div>
-<script>
+<script type="text/javascript">
 (function() {
   var isOpen = false;
   function close() {
@@ -118,7 +118,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
 			<li><a href="presentation.html">Présentation</a></li>
@@ -141,10 +141,10 @@
 		<li><a href="#">Données</a>
 		<ul>
 			<li><a href="donnees.html">Nos données</a></li>
-			<li><a href="hal.html" class="page-link-active">Notre HAL</a></li>
+			<li><a href="hal.html" class="page-link-active">Nos documents HAL</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Documents Internes</a>
+	<li><a href="#">Espace Membre</a>
 		<ul>
 			<li><a href="worksop1.html">Workshop 1</a></li>
 			<li><a href="worksop2.html">Workshop 2</a></li>
@@ -161,13 +161,13 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div></div>
+</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
     </div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos données<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729664972-94" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos Publications<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729669185-96" data-silex-type="text" style="">
-                <div class="silex-element-content normal"><h3><a href="http://www.hydrosciences.org/" title="hydrosciences"><b>Hydrosciences</b></a></h3><p><br></p></div>
+                <div class="silex-element-content normal"><h3><b>Université</b></h3><h3><a href="http://www.hydrosciences.org/" title="hydrosciences"><b></b></a></h3><p><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729843289-103" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Adresse<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder"></a></p><p><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos"></a></p><p><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">CC Maison des Sciences de l'Eau, Université Montpellier 2 Place Eugène Bataillon; 34095 Montpellier cedex 5, France</a></p><br><p></p><p></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729843289-102" data-silex-type="text" style="">
