--- a/fontaine.html
+++ b/fontaine.html
@@ -118,51 +118,8 @@
   close();
 })();
 </script>
-</div></div><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
-	<li><a href="index.html" class="">Accueil</a>
-		<ul>
-			<li><a href="presentation.html">Présentation</a></li>
-			<li><a href="partenaires.html">Partenaires et équipes</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Obervatoires</a>
-		<ul>
-			<li><a href="fontaine.html" class="page-link-active">Fontaine de Vaucluse</a></li>
-			<li><a href="moulis.html">Moulis</a></li>
-			<li><a href="val.html">Val d'Orléans</a></li>
-			<li><a href="craie.html">Karst de la craie</a></li>
-			<li><a href="medycyss.html">Medycyss</a></li>
-			<li><a href="nimes.html">Fontaine de Nîmes</a></li>
-			<li><a href="miou.html">Port Miou</a></li>
-			<li><a href="jurrasic.html">Jurassic Karst</a></li>
-			<li><a href="aquitains.html">Karsts Aquitains</a></li>
-		</ul>
-	</li>
-		<li><a href="#">Données</a>
-		<ul>
-			<li><a href="donnees.html">Nos données</a></li>
-			<li><a href="hal.html">Nos documents HAL</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Espace Membre</a>
-		<ul>
-			<li><a href="worksop1.html">Workshop 1</a></li>
-			<li><a href="worksop2.html">Workshop 2</a></li>
-			<li><a href="worksop3.html">Workshop 3</a></li>
-			<li><a href="worksop4.html">Workshop 4</a></li>
-			<li><a href="worksop5.html">Workshop 5</a></li>
-			<li><a href="worksop6.html">Workshop 6</a></li>
-			<li><a href="rencontre.html">1ère Rencontre</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Logiciels</a>
-		<ul>
-			<li><a href="karstmod.html">KASTMOD</a></li>
-			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
-		</ul>
-	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
-    </div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-fontaine page-link-active" style="">
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
+    <a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-fontaine page-link-active" style="">
         
     <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="container" class="editable-style container-element silex-id-1564081912980-29"></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
 l'une des plus importantes sources karstiques d'Europe. Il s'agit en 
