--- a/fontaine_en.html
+++ b/fontaine_en.html
@@ -162,7 +162,50 @@
 		</ul>
 	</li>
 </ul></div></div><a href="donnees.html" data-silex-type="container" class="editable-style container-element silex-id-1564056536962-6 paged-element page-fontaine_en page-contact"></a><a href="fontaine_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564056527789-5 paged-element page-fontaine_en page-contact page-link-active"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
-    <a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
+    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
+	<li><a href="index.html" class="">Accueil</a>
+		<ul>
+			<li><a href="presentation.html">Présentation</a></li>
+			<li><a href="partenaires.html">Partenaires et équipes</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Obervatoires</a>
+		<ul>
+			<li><a href="fontaine.html" class="">Fontaine de Vaucluse</a></li>
+			<li><a href="moulis.html">Moulis</a></li>
+			<li><a href="val.html">Val d'Orléans</a></li>
+			<li><a href="craie.html">Karst de la craie</a></li>
+			<li><a href="medycyss.html">Medycyss</a></li>
+			<li><a href="nimes.html">Fontaine de Nîmes</a></li>
+			<li><a href="miou.html">Port Miou</a></li>
+			<li><a href="jurrasic.html">Jurassic Karst</a></li>
+			<li><a href="aquitains.html">Karsts Aquitains</a></li>
+		</ul>
+	</li>
+		<li><a href="#">Données</a>
+		<ul>
+			<li><a href="donnees.html">Nos données</a></li>
+			<li><a href="hal.html">Nos documents HAL</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Espace Membre</a>
+		<ul>
+			<li><a href="worksop1.html">Workshop 1</a></li>
+			<li><a href="worksop2.html">Workshop 2</a></li>
+			<li><a href="worksop3.html">Workshop 3</a></li>
+			<li><a href="worksop4.html">Workshop 4</a></li>
+			<li><a href="worksop5.html">Workshop 5</a></li>
+			<li><a href="worksop6.html">Workshop 6</a></li>
+			<li><a href="rencontre.html">1ère Rencontre</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Logiciels</a>
+		<ul>
+			<li><a href="karstmod.html">KASTMOD</a></li>
+			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
+		</ul>
+	</li>
+</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos données<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729664972-94" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos Publications<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
